# hopenstack

./: LICENSE  demo.hs  hopenstack.cabal
src/Network/OpenStack/: Client.hs  Keystone.hs
src/Network/OpenStack/Client/: Wreq.hs
